[workspace]
resolver = "2"

members = [
    "contracts/semi-bridge",
    "contracts/system-remark",
    "contracts/registry",
    "contracts/executor",
]

exclude = [
    "index"
]

# Sneak peek of the new test engine!
[patch.crates-io]
ink_primitives = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.4.0" }
ink_metadata = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.4.0" }
ink_env = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.4.0" }
ink_storage = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.4.0" }
ink_lang = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.4.0" }
ink_lang_codegen = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.4.0" }
ink_lang_ir = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.4.0" }
ink_lang_macro = { git = "https://github.com/Phala-Network/ink.git", branch = "advtest-3.4.0" }

signature = { git = "https://github.com/RustCrypto/traits.git", tag = "signature-v1.3.1" }
