[package]
name = "index"
version = "0.1.0"
authors = ["Wenfeng Wang <kalot.wang@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.3.1", default-features = false }
ink_metadata = { version = "3.3.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.3.1", default-features = false }
ink_storage = { version = "3.3.1", default-features = false }
ink_lang = { version = "3.3.1", default-features = false }
ink_prelude = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
primitive-types = { version = "0.11", default-features = false, features = ["codec", "scale-info"] }

hex-literal = "0.3"
hex = { version = "0.4.3", default-features = false }

pink-extension = { version = "0.1", default-features = false, features = ["ink-as-dependency"] }
pink-web3 = { git = "https://github.com/Phala-Network/pink-web3.git", branch = "pink", default-features = false, features = ["pink", "signing"]}
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29", default-features = false }


[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "pink-web3/std",
    "xcm/std",
]
