[package]
name = "index_executor"
version = "0.1.0"
authors = ["Phala Network"]
edition = "2021"
license = "Apache 2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/index-contract"

[dependencies]
serde = { version = "1.0.140", default-features = false, features = ["derive", "alloc"]}
dyn-clone = "1.0.10"
hex-literal = "0.3"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
fixed = { version = "1", default-features = false, features = ["serde"] }
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

primitive-types = { version = "0.11", default-features = false, features = ["codec", "scale-info"] }
scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"], optional = true }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29", default-features = false }
phala-pallet-common = { git = "https://github.com/Phala-Network/khala-parachain", tag = "v0.1.18", default-features = false }
phat_offchain_rollup = { git = "https://github.com/Phala-Network/phat-offchain-rollup.git", branch = "main", default-features = false, features = ["substrate"] }
kv-session = { git = "https://github.com/Phala-Network/phat-offchain-rollup.git", branch = "main", default-features = false }

pink-extension = { version = "0.2.0", default-features = false }
pink-web3 = { git = "https://github.com/Phala-Network/pink-web3.git", branch = "pink", default-features = false, features = ["pink"]}
pink-json = { git = "https://github.com/Phala-Network/pink-json.git", branch = "pink", default-features = false, features = ["custom-error-messages"] }

index = { path = "../../index", default-features = false }
index_registry = { path = "../index_registry", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
hex-literal = "0.3"
pink-extension-runtime = "0.2.0"
dotenv = "0.15.0"
hex = "0.4.3"
phat_offchain_rollup = { git = "https://github.com/Phala-Network/phat-offchain-rollup.git", branch = "main", default-features = false, features = ["substrate", "logging"] }
pink-subrpc = { version = "0.1.0", default-features = false }

[profile.release]
overflow-checks = false     # Disable integer overflow checks.
lto = false                 # Enable full link-time optimization.

[lib]
name = "index_executor"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "hex/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "xcm/std",
    "phala-pallet-common/std",
    "phat_offchain_rollup/std",
    "pink-extension/std",
    "pink-web3/std",
    "pink-json/std",
    "index/std",
    "index_registry/std",
]
ink-as-dependency = []
