[package]
name = "index_executor"
version = "0.1.0"
authors = ["Phala Network"]
edition = "2021"
license = "Apache 2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/index-contract"

[dependencies]
serde = { version = "=1.0.185", default-features = false, features = ["derive", "alloc"]}
dyn-clone = "1.0.10"
hex-literal = "0.4.1"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
fixed = { version = "=1.23.1", default-features = false, features = ["serde"] }
half = { version = "=2.2.1", default-features = false }
ink = { version = "4.2.1", default-features = false }
ink_env = { version = "4.2.1", default-features = false }

sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43", default-features = false }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = ["codec", "scale-info"] }
scale = { package = "parity-scale-codec", version = "3.6.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"], optional = true }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43", default-features = false }

pink-kv-session = { version = "0.2.0", default-features = false }
pink-extension = { version = "0.4", default-features = false, features = ["dlmalloc"] }
pink-web3 = { version = "0.20.2", git = "https://github.com/Phala-Network/pink-web3.git", branch = "pink", default-features = false, features = ["pink"]}
pink-json = { version = "0.4.0", git = "https://github.com/Phala-Network/pink-json.git", branch = "pink", default-features = false, features = ["custom-error-messages"] }
pink-subrpc = { version = "0.4.4", git = "https://github.com/Phala-Network/phala-blockchain.git", branch = "subrpc-0.4.4", default-features = false }

worker_key_store = { package = "key_store", path = "../key_store", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
env_logger = "0.10.0"
hex-literal = "0.4.1"
pink-extension-runtime = "0.4.4"
dotenv = "0.15.0"
hex = "0.4.3"
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43", default-features = false }

[profile.release]
overflow-checks = false     # Disable integer overflow checks.
lto = false                 # Enable full link-time optimization.

[lib]
name = "index_executor"
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "hex/std",
    "serde/std",
    "fixed/std",
    "ink/std",
    "ink_env/std",
    "scale/std",
    "scale-info/std",
    "xcm/std",
    "pink-extension/std",
    "pink-web3/std",
    "pink-json/std",
    "pink-subrpc/std",
    "worker_key_store/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
]
ink-as-dependency = []

[patch.crates-io]
serde = { git = "https://github.com/kvinwang/serde.git", branch = "patched-v1.0.185" }
