[package]
name = "index_registry"
version = "0.1.0"
authors = ["Phala Network"]
edition = "2021"
license = "Apache 2.0"
homepage = "https://phala.network/"
repository = "https://github.com/Phala-Network/index-contract"

[dependencies]
hex-literal = "0.3"
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"], optional = true }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29", default-features = false }
sp-core-hashing = { version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", default-features = false }

phala-pallet-common = { git = "https://github.com/Phala-Network/khala-parachain", tag = "v0.1.18", default-features = false }

pink-extension = { version = "0.1.0", default-features = false }
pink-web3 = { git = "https://github.com/Phala-Network/pink-web3.git", branch = "pink", default-features = false, features = ["pink"]}

index = { path = "../../index", default-features = false }

[dev-dependencies]
hex-literal = "0.3"
pink-extension-runtime = "0.1.3"
dotenv = "0.15.0"

[profile.release]
overflow-checks = false     # Disable integer overflow checks.
lto = false                 # Enable full link-time optimization.

[lib]
name = "evm_chain"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "xcm/std",
    "sp-core-hashing/std",
    "phala-pallet-common/std",
    "pink-extension/std",
    "pink-web3/std",
    "index/std",
]
ink-as-dependency = []