[package]
name = "traits"
version = "0.1.0"
authors = ["Wenfeng Wang <kalot.wang@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3.3.1", default-features = false }
ink_metadata = { version = "3.3.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.3.1", default-features = false }
ink_storage = { version = "3.3.1", default-features = false }
ink_lang = { version = "3.3.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"], optional = true }

sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29", default-features = false }

pink-extension = { version = "0.1", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "traits"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "sp-io/std",
    "xcm/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
]
ink-as-dependency = []